--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 			dashed
 			double
 		-->
+		<table>
+				<tbody>
+					<tr>
+						<td>A destra un'immagine che rappresenta l'informatica.</td>
+						<td><img src="informatica.jpg" alt="L'informatica intorno a noi" title="L'informatica"/></td>
+						<td>A sinistra un'immagine che rappresenta l'informatica intorno a noi.</td>
+					</tr>
+				</tbody>
+			</table>
 		
 		</head>
 	<body>
