--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 		<table>
 				<tbody>
 					<tr>
-						<td>A destra un'immagine che rappresenta l'informatica.</td>
-						<td><img src="informatica.jpg" alt="L'informatica intorno a noi" title="L'informatica"/></td>
-						<td>A sinistra un'immagine che rappresenta l'informatica intorno a noi.</td>
+						<td>A destra un'immagine del menu delle pizze.</td>
+						<td><img src="menu pizza" alt="Pizzeria Balsamo" title="Pizzeria Balsamo"/></td>
+						<td>A sinistra un'immagine del menu delle pizze.</td>
 					</tr>
 				</tbody>
 			</table>
