--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<tbody>
 					<tr>
 						<td>A destra un'immagine del menu delle pizze.</td>
-						<td><img src="menu pizza.jpg" alt="Pizzeria Balsamo" title="Pizzeria Balsamo"/></td>
+						<td><img src="menu pizza.jpg" alt="Pizzeria Balsamo" title="menu pizza.jpg"/></td>
 						<td>A sinistra un'immagine del menu delle pizze.</td>
 					</tr>
 				</tbody>
