--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</head>
 	<body>
 		<header>
-			<h1>Pizzeria del centro Napoli</h1>
+			<h1>Pizzeria Balsamo</h1>
 		</header>
 		<main>
 			<table>
@@ -58,7 +58,7 @@
 		</main>			
 		<footer>
 			<!-- Blocco di piè di pagina -->
-			&copy; Pierpaolo Balsamo
+			&copy; Balsamo
 		</footer>
 	</body>
 </html>
