--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 			h1{
 				text-align:center;
 				color:red;
-				background-color:heavenly;
+				background-color:green;
 				font-size:50px;
 			}
 			
 			img {
-				width:50%;
+				width:60%;
 				height:auto;
 			}
 			
@@ -59,7 +59,7 @@
 		</main>			
 		<footer>
 			<!-- Blocco di piè di pagina -->
-			&copy; Balsamo
+			&copy; Pierpaolo Balsamo
 		</footer>
 	</body>
 </html>
