--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 			h1{
 				text-align:center;
 				color:red;
-				background-color:green;
+				background-color:heavenly;
 				font-size:50px;
 			}
 			
 			img {
-				width:60%;
+				width:70%;
 				height:auto;
 			}
 			
