--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			h1{
 				text-align:center;
 				color:red;
-				background-color:heavenly;
+				background-color:cyan;
 				font-size:50px;
 			}
 			
