--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<tbody>
 					<tr>
 						<h1>Pizzeria Balsamo</h1>
-						<p> style="color:#009800; background-color:#aa001f";<"Ciao, sono Pierpaolo Balsamo, benevnuto/a nel mio sito web"</p>
+						<p style="color:#009800; background-color:#aa001f";">Ciao, sono Pierpaolo Balsamo, benevnuto/a nel mio sito web"</p>
 						<td>A destra un'immagine del menu delle pizze.</td>
 						<td><img src="menu pizza.jpg" alt="Pizzeria Balsamo" title="menu pizza.jpg"/></td>
 						<td>A sinistra un'immagine del menu delle pizze.</td>
