--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				<tbody>
 					<tr>
 						<h1>Pizzeria Balsamo</h1>
-						<p style="color:#009800; background-color:#aa001f";">Ciao, sono Pierpaolo Balsamo, benevnuto/a nel mio sito web"</p>
+						<p style="color:#1abad6; background-color:#e85613";">Ciao, sono Pierpaolo Balsamo, benevnuto/a nel mio sito web"</p>
 						<td>A destra un'immagine del menu delle pizze.</td>
-						<td><img src="menu pizza.jpg" alt="Pizzeria Balsamo" title="menu pizza.jpg"/></td>
+						<td><img src="menu pizza.jpg" alt="Pizzeria Balsamo" title="Menu delle pizze"/></td>
 						<td>A sinistra un'immagine del menu delle pizze.</td>
 					</tr>
 				</tbody>
@@ -60,7 +60,7 @@
 		</main>			
 		<footer>
 			<!-- Blocco di piè di pagina -->
-			&copy; Pierpaolo Balsamo
+			&copy; 2024 Pierpaolo Balsamo
 		</footer>
 	</body>
 </html>
