--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			
 			img {
 				width:70%;
-				height:auto;
+				height:70%;
 			}
 			
 				</style>
@@ -26,7 +26,7 @@
 				<tbody>
 					<tr>
 						<h1>Pizzeria Balsamo</h1>
-						<p style="color:#1abad6; background-color:#e85613";">Ciao, sono Pierpaolo Balsamo, benevnuto/a nel mio sito web"</p>
+						<p style="color:#e85613; background-color:cyan";">Ciao, sono Pierpaolo Balsamo, benevnuto/a nel mio sito web"</p>
 						<td>A destra un'immagine del menu delle pizze.</td>
 						<td><img src="menu pizza.jpg" alt="Pizzeria Balsamo" title="Menu delle pizze"/></td>
 						<td>A sinistra un'immagine del menu delle pizze.</td>
@@ -44,15 +44,14 @@
 				<thead>
 				<tr>
 					<th>
-						POTENZA
 					</th>
 					<th>
 	</head>
+						CITTA' DI: POTENZA
 	<body>
 		<header>
 		<img
-			<!-- Blocco di intestazione -->
-			<center>Pizzeria Balsamo<h1></h1></center>
+		
 		</header>
 		<main>
 			<!-- Blocco principale -->
