--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 	<head>
 		<!-- Head è il blocco di titolo e collegamento -->
 		<title>Pizzeria Balsamo</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	</head>
 		<style>
 			h1{
 				text-align:center;
@@ -25,7 +27,10 @@
 		<table>
 				<tbody>
 					<tr>
+						<body>
 						<h1>Pizzeria Balsamo</h1>
+						<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+						</body>
 						<p style="color:#e85613; background-color:cyan";">Ciao, sono Pierpaolo Balsamo, benevnuto/a nel mio sito web"</p>
 						<td>A destra un'immagine del menu delle pizze.</td>
 						<td><img src="menu pizza.jpg" alt="Pizzeria Balsamo" title="Menu delle pizze"/></td>
@@ -33,10 +38,11 @@
 					</tr>
 				</tbody>
 			</table>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+		<head>
+		
 		</head>
 	<body>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 	</body>
 		<header>
 			
