--- a/index.html
+++ b/index.html
@@ -1,73 +1,44 @@
 <html>
-	<head>
-		<!-- Head è il blocco di titolo e collegamento -->
-		<title>Pizzeria Balsamo</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	</head>
-		<style>
-			h1{
-				text-align:center;
-				color:red;
-				background-color:cyan;
-				font-size:50px;
-			}
-			
-			img {
-				width:70%;
-				height:70%;
-			}
-			
-				</style>
-		<!--
-			solid
-			dotted
-			dashed
-			double
-		-->
-		<table>
-				<tbody>
-					<tr>
-						<body>
-						<h1>Pizzeria Balsamo</h1>
-						<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-						</body>
-						<p style="color:#e85613; background-color:cyan";">Ciao, sono Pierpaolo Balsamo, benevnuto/a nel mio sito web"</p>
-						<td>A destra un'immagine del menu delle pizze.</td>
-						<td><img src="menu pizza.jpg" alt="Pizzeria Balsamo" title="Menu delle pizze"/></td>
-						<td>A sinistra un'immagine del menu delle pizze.</td>
-					</tr>
-				</tbody>
-			</table>
-		<head>
-		
-		</head>
-	<body>
-
-	</body>
-		<header>
-			
-		</header>
-		<main>
-			<table>
-				<thead>
-				<tr>
-					<th>
-					</th>
-					<th>
-	</head>
-						CITTA' DI: POTENZA
-	<body>
-		<header>
-		<img
-		
-		</header>
-		<main>
-			<!-- Blocco principale -->
-			
-		</main>			
-		<footer>
-			<!-- Blocco di piè di pagina -->
-			&copy; 2024 Pierpaolo Balsamo
-		</footer>
-	</body>
+   <head>
+      <!-- Head è il blocco di titolo e collegamento -->
+      <title>Pizzeria Balsamo</title>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+      <style>
+         h1{
+         text-align:center;
+         color:red;
+         background-color:cyan;
+         font-size:50px;
+         }
+         img {
+         width:70%;
+         height:70%;
+         }
+      </style>
+      <!--
+         solid
+         dotted
+         dashed
+         double
+         -->
+   </head>
+   <body>
+      <header>
+         <h1>Pizzeria Balsamo</h1>
+      </header>
+      <main>
+         <p>CITTA DI: POTENZA</p>
+         <p style="color:#e85613; background-color:cyan;">Ciao, sono Pierpaolo Balsamo, benevnuto/a nel mio sito web"</p>
+         <div class = "row">
+            <div class = "col">A destra un'immagine del menu delle pizze.</div>
+            <div class = "col"><img src="menu pizza.jpg" alt="Pizzeria Balsamo" title="Menu delle pizze"/></div>
+            <div class = "col">A sinistra un'immagine del menu delle pizze.</div>
+         </div>
+      </main>
+      <footer>
+         <!-- Blocco di piè di pagina -->
+         &copy; 2024 Pierpaolo Balsamo
+      </footer>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+   </body>
 </html>
