--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <main>
          <p>CITTA DI: POTENZA</p>
-         <p style="color:#e85613; background-color:cyan;">Ciao, sono Pierpaolo Balsamo, benevnuto/a nel mio sito web"</p>
+         <p style="color:#e85613; background-color:cyan;">Ciao, sono Pierpaolo Balsamo, benvenuto/a nel mio sito web"</p>
          <div class = "row">
             <div class = "col">A destra un'immagine del menu delle pizze.</div>
             <div class = "col"><img src="menu pizza.jpg" alt="Pizzeria Balsamo" title="Menu delle pizze"/></div>
@@ -37,6 +37,7 @@
          </div>
       </main>
       <footer>
+         <p style="color:red;">Le nostre Pizze</p>
          <!-- Blocco di piè di pagina -->
          &copy; 2024 Pierpaolo Balsamo
       </footer>
