--- a/Interactions (1).html
+++ b/Interactions (1).html
@@ -25,6 +25,10 @@
                         <p style="background-color: black; color: white; text-align: center;" id="toChange">#000000</p>
                     </div>
                 </div>
+		    <div class = "row">
+			    <input type="test" td"input color"/>
+			<div class="col-4">
+			</div>
             </div>
 		</main>
 		<footer>
