--- a/blue deal.html
+++ b/blue deal.html
@@ -27,7 +27,11 @@
 		rappresenta una delle sfide sul fronte della sostenibilità e della transizione green che maggiormente dovrebbe attrarre l’attenzione degli investitori.
 		Per questo motivo, da tempo, si parla della realizzazione di un Blue Deal che,
 		alla stregua del Green Deal e in stretta correlazione con esso, dovrebbe regolamentare e pianificare a livello europeo tutte le iniziative per la salvaguardia dell’oro blu.</p>
-		<img src="blue deal immagine.jpg" alt="Blue Deal"/>
+		<table>
+			<div>
+			<img src="blue deal immagine.jpg"/>
+			</div>
+		</table>
 	</main>
 	&copy; 2024 Pierpaolo Balsamo
 </html>
