--- a/blue deal.html
+++ b/blue deal.html
@@ -17,10 +17,10 @@
 	}
 	</style>
 	</head>
-		<body>
+	<body>
 		<header>
 			<h1>Blue Deal europeo, come l'europa combatte la povertà idrica</h1>
-		</body>
+		
 		</header>
 	<main>
 		<p>L’acqua, risorsa indispensabile per la vita e per l’economia, 
@@ -28,10 +28,9 @@
 		Per questo motivo, da tempo, si parla della realizzazione di un Blue Deal che,
 		alla stregua del Green Deal e in stretta correlazione con esso, dovrebbe regolamentare e pianificare a livello europeo tutte le iniziative per la salvaguardia dell’oro blu.</p>
 		<table>
-			<div>
-			<img src="blue deal immagine.jpg"/>
-			</div>
+			<img src="blue deal immagine.jpg">
 		</table>
+	</body>
 	</main>
 	&copy; 2024 Pierpaolo Balsamo
 </html>
