--- a/blue deal.html
+++ b/blue deal.html
@@ -24,7 +24,7 @@
 		Per questo motivo, da tempo, si parla della realizzazione di un Blue Deal che,
 		alla stregua del Green Deal e in stretta correlazione con esso, dovrebbe regolamentare e pianificare a livello europeo tutte le iniziative per la salvaguardia dell’oro blu.</p>
 		
-			<img src="blue deal immagine.jpg">
+			<img src="bleu_deal_europeo.jpg">
 	</body>
 	</main>
 	&copy; 2024 Pierpaolo Balsamo
