--- a/blue deal.html
+++ b/blue deal.html
@@ -12,6 +12,10 @@
 	text-align:center;
 	color:white;
 	}
+	h2{
+	color:blue;
+	text-align:center;
+	}
 	</style>
 	</head>
 	<body>
@@ -25,6 +29,11 @@
 		alla stregua del Green Deal e in stretta correlazione con esso, dovrebbe regolamentare e pianificare a livello europeo tutte le iniziative per la salvaguardia dell’oro blu.</p>
 		
 			<img src="bleu_deal_europeo.jpg">
+			<h2>I punti chiave del progetto Blue Deal fra etica ed economia</h2>
+		<p>Alla fine del 2023 il CESE, 
+		Comitato economico e sociale europeo, ha redatto 15 principi guida e 21 azioni che sono contenute nella Dichiarazione per un Blue Deal europeo.
+		L’attenzione è rivolta in particolare alle perdite d’acqua nelle reti e agli sprechi in agricoltura, industria e famiglie.
+		L’obiettivo dichiarato è quello di anticipare i bisogni, di preservare e gestire adeguatamente le risorse idriche comuni nel breve, medio e lungo termine.</p>
 	</body>
 	</main>
 	&copy; 2024 Pierpaolo Balsamo
