--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
       </main>
       <footer>
          <p style="color:red;">Le nostre Pizze</p>
-         <img src="margherita.jpg" alt="Margherita con bufala">
-         <p style="color:red; background-color:green;">Margherita con bufala</p>
+         <img src="margherita.jpg" title="Margherita con bufala">
+         <p style="color:green; background-color:red;">Margherita con bufala</p>
+         
          
          <!-- Blocco di piè di pagina -->
          &copy; 2024 Pierpaolo Balsamo
