--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       <style>
          h1{
          text-align:center;
-         color:red;
-         background-color:cyan;
+         color:white;
+         background-color:red;
          font-size:50px;
          }
          img {
@@ -29,7 +29,7 @@
       </header>
       <main>
          <p>CITTA DI: POTENZA</p>
-         <p style="color:#e85613; background-color:cyan;">Ciao, sono Pierpaolo Balsamo, benvenuto/a nel mio sito web"</p>
+         <p style="color:#e85613; background-color:blue;">Ciao, sono Pierpaolo Balsamo, benvenuto/a nel mio sito web"</p>
          <div class = "row">
             <div class = "col">A destra un'immagine del menu delle pizze.</div>
             <div class = "col"><img src="menu pizza.jpg" alt="Pizzeria Balsamo" title="Menu delle pizze"/></div>
