--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          <h1>Pizzeria Balsamo</h1>
       </header>
       <main>
-         <p>CITTA DI: POTENZA</p>
+         <p style = "background-color:blue;" color:white;" "width:20%;">CITTA DI: POTENZA</p>
          <p style="color:#e85613; background-color:blue;">Ciao, sono Pierpaolo Balsamo, benvenuto/a nel mio sito web"</p>
          <div class = "row">
             <div class = "col">A destra un'immagine del menu delle pizze.</div>
