--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
          <h1>Pizzeria Balsamo</h1>
       </header>
       <main>
-         <p style = "background-color:blue;" color:white;" "width:20%;">CITTA DI: POTENZA</p>
-         <p style="color:#e85613; background-color:blue;">Ciao, sono Pierpaolo Balsamo, benvenuto/a nel mio sito web"</p>
+         <p style = "background-color:blue;" color:white; text-align:center; ">CITTA DI: POTENZA</p>
+         <p style="color:#e85613;">Ciao, sono Pierpaolo Balsamo, benvenuto/a nel mio sito web"</p>
          <div class = "row">
             <div class = "col">A destra un'immagine del menu delle pizze.</div>
             <div class = "col"><img src="menu pizza.jpg" alt="Pizzeria Balsamo" title="Menu delle pizze"/></div>
