--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          <h1>Pizzeria Balsamo</h1>
       </header>
       <main>
-         <p style = "background-color:blue;" color:white; text-align:center; ">CITTA DI: POTENZA</p>
+         <p style = "background-color:blue; color:white;">CITTA DI: POTENZA</p>
          <p style="color:#e85613;">Ciao, sono Pierpaolo Balsamo, benvenuto/a nel mio sito web"</p>
          <div class = "row">
             <div class = "col">A destra un'immagine del menu delle pizze.</div>
@@ -39,7 +39,7 @@
       <footer>
          <p style="color:red;">Le nostre Pizze</p>
          <img src="margherita.jpg" title="Margherita con bufala">
-         <p style="color:green; background-color:red;">Margherita con bufala</p>
+         <p style="color:green;">Margherita con bufala</p>
          
          
          <!-- Blocco di piè di pagina -->
