--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
          width:90%;
          height:90%;
          }
+         p{
+            text-align:center;
+         }
       </style>
       <!--
          solid
@@ -28,7 +31,7 @@
          <h1>Pizzeria Balsamo</h1>
       </header>
       <main>
-         <p style = "background-color:blue; color:white;">CITTA DI: POTENZA</p>
+         <p style = "background-color:blue; color:white;">Città di: POTENZA</p>
          <p style="color:#e85613;">Ciao, sono Pierpaolo Balsamo, benvenuto/a nel mio sito web"</p>
          <div class = "row">
             <div class = "col">A destra un'immagine del menu delle pizze.</div>
@@ -37,7 +40,7 @@
          </div>
       </main>
       <footer>
-         <p style="color:red;">Le nostre Pizze</p>
+         <p style="color:red;">LE NOSTRE PIZZE</p>
          <img src="margherita.jpg" title="Margherita con bufala">
          <p style="color:green;">Margherita con bufala</p>
          
