--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
          </div>
       </main>
       <footer>
-         <p style="color:red;">LE NOSTRE PIZZE</p>
-         <img src="margherita.jpg" title="Margherita con bufala">
-         <p style="color:green;">Margherita con bufala</p>
-         
+         <p style="color:red; background-color:cyan;">LE NOSTRE PIZZE</p>
+         <img src="margherita.jpg" title="Margherita con bufala" style= "width:40%;">
+         <p style="background-color:green;">Bufalina</p>
+         <p style="color:grey;">(Pomodoro, Mozzarella di bufala)</p>
          
          <!-- Blocco di piè di pagina -->
          &copy; 2024 Pierpaolo Balsamo
