--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
          img {
          width:90%;
          height:90%;
+         align:center;
          }
          p{
             text-align:center;
@@ -42,7 +43,7 @@
       <footer>
          <p style="color:red; background-color:cyan;">LE NOSTRE PIZZE</p>
          <img src="margherita.jpg" title="Margherita con bufala" style= "width:40%;">
-         <p style="background-color:green;">Bufalina</p>
+         <p style="background-color:green; color:white;">Bufalina</p>
          <p style="color:grey;">(Pomodoro, Mozzarella di bufala)</p>
          
          <!-- Blocco di piè di pagina -->
