--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
       </main>
       <footer>
          <p style="color:red; background-color:cyan;">LE NOSTRE PIZZE</p>
-         <img src="margherita.jpg" title="Margherita con bufala" style= "width:40%;">
+         <img src="margherita.jpg" title="Margherita con bufala" style= "width:40%; height:50%">
          <p style="background-color:green; color:white;">Bufalina</p>
          <p style="color:grey;">(Pomodoro, Mozzarella di bufala)</p>
-         
+         <img src="capricciosa.webp" title="Capricciosa" style= "width:40%; height:50%">
+          <p style="background-color:green; color:white;">Capricciosa</p>
+         <p style="color:grey;">(Pomodoro, Mozzarella, Prosciutto cotto, olive, carciofi, funghi)</p>
          <!-- Blocco di piè di pagina -->
          &copy; 2024 Pierpaolo Balsamo
       </footer>
