--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
          <img src="capricciosa.webp" title="Capricciosa" style= "width:40%; height:50%">
           <p style="background-color:green; color:white;">Capricciosa</p>
          <p style="color:grey;">(Pomodoro, Mozzarella, Prosciutto cotto, olive, carciofi, funghi)</p>
+         <img src="pizza-crudaiola" title="Crudaiola" style= "width:40%; height:50%">
+         <p style="background-color:green; color:white;">Crudaiola</p>
+         <p style="color:grey;">(Pomodorini, Mozzarella, Prosciutto crudo, Rucola)</p>
          <!-- Blocco di piè di pagina -->
          &copy; 2024 Pierpaolo Balsamo
       </footer>
