--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
          <img src="la-pizza-crudaiola.jpg" title="Crudaiola" style= "width:40%; height:50%">
          <p style="background-color:green; color:white;">Crudaiola</p>
          <p style="color:grey;">(Pomodorini, Mozzarella, Prosciutto crudo, Rucola)</p>
-         <a href="blue deal (2);">Sito web sul Blue Deal</a>
+         <a href="blue deal (2).html;">Sito web sul Blue Deal</a>
 		   <p style="background-color:#30D5C8;">© Pierpaolo Balsamo</p> 
       </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
